--- a/stencil/Makefile
+++ b/stencil/Makefile
@@ -1,7 +1,11 @@
 PROG = stencil
 
+STARPU_VERSION = starpu-1.3
 CFLAGS = -Wall -g -O3
 LDLIBS = -lm
+
+CFLAGS += $(shell pkg-config --cflags $(STARPU_VERSION))
+LDLIBS += $(shell pkg-config --libs $(STARPU_VERSION))
 
 .phony: all clean
 
