Updated gitignore & Makefile

--- a/histogram/Makefile
+++ b/histogram/Makefile
@@ -1,6 +1,6 @@
-PROG = histogram
+PROG = histogram histogram_omp_outer histogram_omp_inner histogram_omp_collapse histogram_omp_taskloop
 
-CFLAGS = -Wall -g -O3
+CFLAGS = -Wall -g -O3 -fopenmp
 LDLIBS = -lm
 
 .phony: all clean
