--- a/histogram/Makefile
+++ b/histogram/Makefile
@@ -1,4 +1,4 @@
-PROG = histogram histogram_omp_outer histogram_omp_inner histogram_omp_collapse #histogram_omp_taskloop
+PROG = histogram histogram_omp_outer histogram_omp_inner histogram_omp_collapse histogram_omp_reduce
 
 CFLAGS = -Wall -g -O3 -fopenmp
 LDLIBS = -lm
